--- a/Unit_3_Embedded_C/LEC3_ASSs/LAB1_Debugging_Using_GDB_and_Makefile/Lab1_Debugging_Makefile/Makefile
+++ b/Unit_3_Embedded_C/LEC3_ASSs/LAB1_Debugging_Using_GDB_and_Makefile/Lab1_Debugging_Makefile/Makefile
@@ -18,7 +18,7 @@ all: $(PROJ_NAME).bin
 
 #--------------------------------------------------------------------------------------
 %.o: %.c
-	$(CC)gcc.exe $(CFLAGS) $(INCS) $< -o $@
+	$(CC)gcc.exe $(CFLAGS) $(INCS) -c $< -o $@
 
 #--------------------------------------------------------------------------------------
 
@@ -28,7 +28,7 @@ all: $(PROJ_NAME).bin
 #--------------------------------------------------------------------------------------
 
 $(PROJ_NAME).elf: $(OBJ) $(AS_OBJ)
-	$(CC)ld.exe -T linker_script.ld $(OBJ) -Map=Map_File.map -o $@
+	$(CC)ld.exe -T linker_script.ld $(INCS) $(OBJ) -Map=Map_File.map -o $@
 
 #--------------------------------------------------------------------------------------
 
@@ -42,6 +42,8 @@ clean:
 
 clean_all: 
 	rm *.o *.elf *.bin
+	@echo "================= All is been deleted ================="
+
 
 
 #--------------------------------------------------------------------------------------
