--- a/Unit_3_Embedded_C/LEC1_ASSs/STM32F103C6_TOG_Led/Debug/makefile
+++ b/Unit_3_Embedded_C/LEC1_ASSs/STM32F103C6_TOG_Led/Debug/makefile
@@ -37,6 +37,9 @@ default.size.stdout \
 OBJDUMP_LIST += \
 STM32F103C6_TOG_Led.list \
 
+OBJCOPY_HEX += \
+STM32F103C6_TOG_Led.hex \
+
 OBJCOPY_BIN += \
 STM32F103C6_TOG_Led.bin \
 
@@ -45,8 +48,8 @@ STM32F103C6_TOG_Led.bin \
 all: STM32F103C6_TOG_Led.elf secondary-outputs
 
 # Tool invocations
-STM32F103C6_TOG_Led.elf: $(OBJS) $(USER_OBJS) D:\Learn_In_Depth\Work\ Space\2_Embedded_C\STM32F103C6_TOG_Led\STM32F103C6TX_FLASH.ld
-	arm-none-eabi-gcc -o "STM32F103C6_TOG_Led.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\Learn_In_Depth\Work Space\2_Embedded_C\STM32F103C6_TOG_Led\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32F103C6_TOG_Led.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+STM32F103C6_TOG_Led.elf: $(OBJS) $(USER_OBJS) D:\Learn_In_Depth\Embedded_System_Online_Diploma\Unit_3_Embedded_C\LEC1_ASSs\STM32F103C6_TOG_Led\STM32F103C6TX_FLASH.ld
+	arm-none-eabi-gcc -o "STM32F103C6_TOG_Led.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"D:\Learn_In_Depth\Embedded_System_Online_Diploma\Unit_3_Embedded_C\LEC1_ASSs\STM32F103C6_TOG_Led\STM32F103C6TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="STM32F103C6_TOG_Led.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -60,6 +63,11 @@ STM32F103C6_TOG_Led.list: $(EXECUTABLES)
 	@echo 'Finished building: $@'
 	@echo ' '
 
+STM32F103C6_TOG_Led.hex: $(EXECUTABLES)
+	arm-none-eabi-objcopy  -O ihex $(EXECUTABLES) "STM32F103C6_TOG_Led.hex"
+	@echo 'Finished building: $@'
+	@echo ' '
+
 STM32F103C6_TOG_Led.bin: $(EXECUTABLES)
 	arm-none-eabi-objcopy  -O binary $(EXECUTABLES) "STM32F103C6_TOG_Led.bin"
 	@echo 'Finished building: $@'
@@ -70,7 +78,7 @@ clean:
 	-$(RM) *
 	-@echo ' '
 
-secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_BIN)
+secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST) $(OBJCOPY_HEX) $(OBJCOPY_BIN)
 
 .PHONY: all clean dependents
 .SECONDARY:
