--- a/Unit_3_Embedded_C/LEC3_ASSs/LAB2_Cortex_M3/Lab2_startup_c/Makefile
+++ b/Unit_3_Embedded_C/LEC3_ASSs/LAB2_Cortex_M3/Lab2_startup_c/Makefile
@@ -3,7 +3,7 @@
 
 #======================================================================================
 CC=arm-none-eabi-
-CFLAGS=-mcpu=cortex-m3 -gdwarf-2
+CFLAGS=-gdwarf-2 -mcpu=cortex-m3
 INCS=-I .
 LIBS=
 SRC=$(wildcard *.c)
@@ -19,7 +19,7 @@ all: $(PROJ_NAME).bin
 
 #--------------------------------------------------------------------------------------
 %.o: %.c
-	$(CC)gcc.exe $(CFLAGS) $(INCS) -c $< -o $@
+	$(CC)gcc.exe -c $(CFLAGS) $(INCS) $< -o $@
 
 #--------------------------------------------------------------------------------------
 
@@ -43,7 +43,7 @@ clean:
 
 clean_all: 
 	rm *.o *.elf *.bin
-	@echo "================= It is been deleted ================="
+	@echo "================= It is been Cleaned ================="
 
 
 
